--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,4 +1,4 @@
-name: Hello World Pipeline
+name: ETL Pipeline
 
 on:
   push:
@@ -6,11 +6,19 @@ on:
       - main
 
 jobs:
-  say_hello:
+  run_etl:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Print Hello
-        run: echo "Hello from GitHub Actions! 🚀"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install pandas
+
+      - name: Run ETL script
+        run: python scripts/etl_demo.py
